assets/css/main.scss
---
---

@import 'highlight.css';
@import 'font.css';

$nav-color: hsl(275, 100%, 25%);
$heading-color: hsl(275, 5%, 83%);
$code-bg-color: hsl(275, 5%, 94%);
$code-color: hsl(275, 5%, 30%);
$nav-breakpoint: 700px;

@mixin large {
  @media only screen and (min-width: $nav-breakpoint) {
    @content;
  }
}

@mixin small {
  @media only screen and (max-width: $nav-breakpoint - 1px) {
    @content;
  }
}

@mixin padded {
  padding: 10px 30px;
}

html, body {
  margin: 0px;
  height: 100%;
}

a {
  text-decoration: none;
  &:hover { text-decoration: underline; }
}

code, pre {
  font-size: 15px; /* default is 13 */
  background-color: $code-bg-color;
  color: $code-color
}
code {
  padding: 1px 3px;
}
pre {
  padding: 8px;
  overflow: scroll;
}

sup, sub {
  font-size: 11px; /* default is 13.5 */
}

mjx-container {
  overflow: scroll;
  overflow-y: hidden;
}

.featural {
  font-family: "English Featural Alphabet";
  font-size: 17px; /* default is 16 */
}

.page {
  height: 100%;
  font-family: "Libre Baskerville", serif;
  @include large {
    display: grid;
    grid-template-columns: Max(25%, 260px); /* nav width */
  }
}

nav {
  @include padded;
  background-color: $nav-color;
  a { color: white; }
  @include small {
    #menu-icon {
      float: right;
      position: relative;
      bottom: 5px;
    }
    .hidden { display: none; }
  }
  @include large {
    height: 100%;
    #menu-icon { display: none; }
    .fixed { position: fixed; }
  }
}

main {
  @include large {
    grid-column: 2;
  }
  .heading {
    @include padded;
    background-color: $heading-color;
  }
  .content {
    @include padded;
    &.narrow { max-width: 800px; }
    font-family: "Noto Sans", sans-serif;
    h2 { font-family: "Libre Baskerville", serif; }
    .serif { font-family: "Libre Baskerville", serif; }
  }
}

.image-row {
  padding-top: 10px;
  display: flex;
  flex-direction: row;
  align-items: center;
  img { margin-right: 20px; }
}

.game-section {
  padding-top: 20px;
  /* min card width should be about 150px */
  @include small {
    column-count: 1;
    @media only screen and (min-width: 380px) {
      column-count: 2;
    }
    @media only screen and (min-width: 550px) {
      column-count: 3;
    }
  }
  @include large {
    column-count: 2;
    @media only screen and (min-width: 810px) {
      column-count: 3;
    }
    @media only screen and (min-width: 980px) {
      column-count: 4;
    }
    @media only screen and (min-width: 1190px) {
      column-count: 5;
    }
  }
}

.game-card {
  width: 97%;
  border: 1px solid black;
  break-inside: avoid;
  margin-bottom: 20px;
  a {
    color: black;
  }
  img {
    width: 100%;
    display: block;
  }
  div {
    text-align: center;
    padding: 10px;
    border-top: 1px solid black;
    color: black;
  }
}

